# susy-wordlist

./: Cargo.toml  LICENSE  README.md  index.js  index.spec.js  package.json
res/: wordlist.json  wordlist.txt
src/: lib.rs
